--- a/public/5F/index.html
+++ b/public/5F/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+TC">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css' />
-    <link rel="stylesheet" href="css/05boss.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div id="app">
@@ -39,4 +39,4 @@
 </html>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.18-beta.0/vue.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js'></script>
-<script src='js/05boss.js'></script>
+<script src='main.js'></script>
