--- a/public/5f/index.html
+++ b/public/5f/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
-    <title>新手js地下城 5F-全台空氣指標儀表板</title>
+    <title>js地下城 5F-全台空氣指標儀表板</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+TC">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css' />
@@ -17,7 +17,7 @@
         <div class="md-header">
           <h1>空氣品質指標(AQI)</h1>
           <select v-model="key">
-            <option value="請選擇杝區">請選擇杝區</option>
+            <option value="請選擇地區">請選擇地區</option>
             <option v-for="(item,i) in datacity" :key="i" :value="item">{{ item }}
             </option>
           </select>
