--- a/sourse/1f/index.html
+++ b/sourse/1f/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>新手js地下城 1F-9x9 乘法表板</title>
+    <title>js地下城 1F-9x9 乘法表板</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
