--- a/sourse/3f/index.html
+++ b/sourse/3f/index.html
@@ -12,31 +12,32 @@
   <body>
     <div class="calculator">
       <div class="cal-header">
-        <p class="cal">12344444</p>
-        <p class="total">222222222222222</p>
+        <p class="digit">0</p>
+        <p class="cal" style="font-size:56px;">0</p>
       </div>
       <div class="cal-body">
-        <span class="num">7</span>
-        <span class="num">8</span>
-        <span class="num">9</span>
-        <span class="oper">÷</span>
-        <span class="num">4</span>
-        <span class="num">5</span>
-        <span class="num">6</span>
-        <span class="oper">×</span>
-        <span class="num">1</span>
-        <span class="num">2</span>
-        <span class="num">3</span>
-        <span class="oper">+</span>
-        <span class="num">0</span>
-        <span class="num">00</span>
-        <span class="num">.</span>
-        <span class="oper">−</span>
-        <span class="num">AC</span>
-        <span class="back">⌫</span>
-        <span class="sum">=</span>
+        <span data-key="55,103" class="num">7</span>
+        <span data-key="56,104" class="num">8</span>
+        <span data-key="57,105" class="num">9</span>
+        <span data-key="111,191" class="oper">÷</span>
+        <span data-key="52,100" class="num">4</span>
+        <span data-key="53,101" class="num">5</span>
+        <span data-key="54,102" class="num">6</span>
+        <span data-key="106" class="oper">×</span>
+        <span data-key="49,97" class="num">1</span>
+        <span data-key="50,98" class="num">2</span>
+        <span data-key="51,99" class="num">3</span>
+        <span data-key="107,187" class="oper">+</span>
+        <span data-key="48,96" class="num">0</span>
+        <span data-key="" class="num">00</span>
+        <span data-key="110,190" class="num">.</span>
+        <span data-key="109,189" class="oper">−</span>
+        <span data-key="" class="clear">AC</span>
+        <span data-key="" class="back">⌫</span>
+        <span data-key="13" class="sum">=</span>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
-<script src="main.js"></script>
+
