--- a/sourse/3f/index.html
+++ b/sourse/3f/index.html
@@ -30,7 +30,7 @@
         <span data-key="107,187" class="oper">+</span>
         <span data-key="48,96" class="num">0</span>
         <span data-key="" class="num">00</span>
-        <span data-key="110,190" class="num">.</span>
+        <span data-key="110,190" class="dot">.</span>
         <span data-key="109,189" class="oper">−</span>
         <span data-key="" class="clear">AC</span>
         <span data-key="" class="back">⌫</span>
