6F-60秒算數遊戲

--- a/public/6f/index.html
+++ b/public/6f/index.html
@@ -12,52 +12,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div id="app">
-      <!-- <section class="start">
-    <div class="header">
-      <div class="sec">{{ challenge }}</div>
-      <div class="caption">
-        <p>SECONDS</p>
-        <p>CHALLENGE</p>
-      </div>
-    </div>
-    <div class="main">
-      <button>START!</button>
-      <p class="tip"
-        @click="go()"
-      >try to answer more as you can</p>
-    </div>
-  </section> -->
-      <!-- <section class="play">
-    <div class="header">
-      <div class="now">
-        <label>60 SECONDS CHALLENGE</label>
-        <p><span>SCORE</span>001</p>
-      </div>
-      <div class="time">00 : 59</div>
-    </div>
-    <div class="main">
-      <div class="calculate">
-        <span class="num">11</span>
-        <span class="func">×</span>
-        <span class="num">12</span>
-        <span class="func">=</span>
-        <span class="sum">
-          <input type="text" value="">
-        </span>
-        
-      </div>
-    </div>
-  </section> -->
-      <!-- <section class="end" >
-    <div class="main">
-      <label>60 SECONDS CHALLENGE</label>
-      <p class="final">YOUR FINAL SCORE</p>
-      <p class="result">74</p>
-      <button>TRY AGAIN!</button>
-    </div>
-  </section> -->
-    </div>
+    <div id="app"></div>
   </body>
 </html>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.18-beta.0/vue.js'></script>
