--- a/sourse/3f/index.html
+++ b/sourse/3f/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="calculator">
       <div class="cal-header">
-        <p class="digit">0</p>
-        <p class="cal" style="font-size:56px;">0</p>
+        <p class="formula">0</p>
+        <p class="result" style="font-size:56px;">0</p>
       </div>
       <div class="cal-body">
         <span data-key="55,103" class="num">7</span>
