--- a/public/3f/index.html
+++ b/public/3f/index.html
@@ -16,25 +16,25 @@
         <p class="result" style="font-size:56px;">0</p>
       </div>
       <div class="cal-body">
-        <span data-key="55,103" class="num">7</span>
-        <span data-key="56,104" class="num">8</span>
-        <span data-key="57,105" class="num">9</span>
-        <span data-key="111,191" class="oper">÷</span>
-        <span data-key="52,100" class="num">4</span>
-        <span data-key="53,101" class="num">5</span>
-        <span data-key="54,102" class="num">6</span>
-        <span data-key="106" class="oper">×</span>
-        <span data-key="49,97" class="num">1</span>
-        <span data-key="50,98" class="num">2</span>
-        <span data-key="51,99" class="num">3</span>
-        <span data-key="107,187" class="oper">+</span>
-        <span data-key="48,96" class="num">0</span>
+        <span data-key="7" class="num">7</span>
+        <span data-key="8" class="num">8</span>
+        <span data-key="9" class="num">9</span>
+        <span data-key="/" class="oper">÷</span>
+        <span data-key="4" class="num">4</span>
+        <span data-key="5" class="num">5</span>
+        <span data-key="6" class="num">6</span>
+        <span data-key="*" class="oper">×</span>
+        <span data-key="1" class="num">1</span>
+        <span data-key="2" class="num">2</span>
+        <span data-key="3" class="num">3</span>
+        <span data-key="+" class="oper">+</span>
+        <span data-key="0" class="num">0</span>
         <span data-key="" class="num">00</span>
-        <span data-key="110,190" class="dot">.</span>
-        <span data-key="109,189" class="oper">−</span>
+        <span data-key="." class="dot">.</span>
+        <span data-key="-" class="oper">−</span>
         <span data-key="" class="clear">AC</span>
-        <span data-key="" class="back">⌫</span>
-        <span data-key="13" class="sum">=</span>
+        <span data-key="Backspace" class="back">⌫</span>
+        <span data-key="Enter" class="sum">=</span>
       </div>
     </div>
     <script src="main.js"></script>
