--- a/sourse/7f/index.html
+++ b/sourse/7f/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <canvas id="canvas" width="1280px" height="800px"></canvas>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
 <script src="main.js"></script>
