--- a/public/7f/index.html
+++ b/public/7f/index.html
@@ -6,10 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>js地下城 7F-畫版</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div class="main">
+      <canvas></canvas>
+      <div class="topbar">
+        <a href="" download="" class="func save"><i class="fas fa-save"></i>SAVE</a>
+        <div class="func clear"><i class="fas fa-expand"></i>CLEAR ALL</div>
+        <div class="func undo"><i class="fas fa-undo"></i>UNDO</div>
+        <div class="func redo"><i class="fas fa-redo"></i>REDO</div>
+      </div>
+      <div class="bottombar">
+        <div class="pen"></div>
+        <div class="func pensize"></div>
+        <div class="func pencolor"></div>
+      </div>
+    </div>
   </body>
 </html>
 <script src="main.js"></script>
