--- a/public/7f/index.html
+++ b/public/7f/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="main">
       <canvas></canvas>
-      <div class="topbar">
+      <div class="topbar is-active">
         <button><i class="fas fa-angle-up"></i></button>
         <a href="" download="" class="func save"><i class="fas fa-save"></i>SAVE</a>
         <div class="func clear"><i class="fas fa-expand"></i>CLEAR ALL</div>
@@ -24,7 +24,7 @@
         <!-- <button><i class="fas fa-angle-down"></i></button> -->
         <div class="func pen"><i class="fas fa-paint-brush"></i></div>
         <div class="func pensize">SIZE <input type="text" value="10" />px</div>
-        <div class="func pencolor">COLOR: <input type="color" /></div>
+        <div class="func pencolor">COLOR: <input type="color" value="#ff0000" /></div>
       </div>
     </div>
     </div>
