--- a/sourse/7f/index.html
+++ b/sourse/7f/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="main">
       <canvas></canvas>
-      <div class="topbar is-active">
+      <div class="topbar">
         <button><i class="fas fa-angle-up"></i></button>
         <a href="" download="" class="func save"><i class="fas fa-save"></i>SAVE</a>
         <div class="func clear"><i class="fas fa-expand"></i>CLEAR ALL</div>
@@ -21,9 +21,13 @@
         <div class="func redo" data-step='1'><i class="fas fa-redo"></i>REDO</div>
       </div>
       <div class="bottombar">
-        <!-- <button><i class="fas fa-angle-down"></i></button> -->
+        <button><i class="fas fa-angle-down"></i></button>
+        <div class="func eraser"><i class="fas fa-eraser"></i></div>
         <div class="func pen"><i class="fas fa-paint-brush"></i></div>
-        <div class="func pensize">SIZE <input type="text" value="10"/>px</div>
+        <div class="func pensize">SIZE 
+          <input type="text"value="10"/>
+          <input type="range" min="5" max="20" value="10"/>
+        px</div>
         <div class="func pencolor">COLOR: 
           <input type="color" value="#ff0000" /></div>
         </div>
