--- a/sourse/7f/index.html
+++ b/sourse/7f/index.html
@@ -22,8 +22,11 @@
       </div>
       <div class="bottombar">
         <button><i class="fas fa-angle-down"></i></button>
-        <div class="func eraser"><i class="fas fa-eraser"></i></div>
-        <div class="func pen"><i class="fas fa-paint-brush"></i></div>
+        <!-- <div class="paint font"><i class="fas fa-font"></i></div> -->
+        
+        <div class="paint square"><i class="fas fa-square-full"></i></div>
+        <div class="paint eraser"><i class="fas fa-eraser"></i></div>
+        <div class="paint pen is-active"><i class="fas fa-paint-brush"></i></div>
         <div class="func pensize">SIZE 
           <input type="text"value="10"/>
           <input type="range" min="5" max="20" value="10"/>
