--- a/sourse/7f/index.html
+++ b/sourse/7f/index.html
@@ -15,7 +15,7 @@
       <canvas></canvas>
       <div class="topbar">
         <button><i class="fas fa-angle-up"></i></button>
-        <a href="" download="" class="func save"><i class="fas fa-save"></i>SAVE</a>
+        <a href="" class="func save"><i class="fas fa-save"></i>SAVE</a>
         <div class="func clear"><i class="fas fa-expand"></i>CLEAR ALL</div>
         <div class="func undo" data-step='-1'><i class="fas fa-undo"></i>UNDO</div>
         <div class="func redo" data-step='1'><i class="fas fa-redo"></i>REDO</div>
@@ -23,12 +23,11 @@
       <div class="bottombar">
         <button><i class="fas fa-angle-down"></i></button>
         <!-- <div class="paint font"><i class="fas fa-font"></i></div> -->
-        
         <div class="paint square"><i class="fas fa-square-full"></i></div>
         <div class="paint eraser"><i class="fas fa-eraser"></i></div>
         <div class="paint pen is-active"><i class="fas fa-paint-brush"></i></div>
         <div class="func pensize">SIZE 
-          <input type="text"value="10"/>
+          <input type="select" min="5" max="20" value="10"/>
           <input type="range" min="5" max="20" value="10"/>
         px</div>
         <div class="func pencolor">COLOR: 
