--- a/sourse/8f/index.html
+++ b/sourse/8f/index.html
@@ -6,12 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>js地下城 8F-井字遊戲</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!-- <div class="start">
+        <div class="tictactoe">
+          <div>TIC</div>
+          <div>○</div>
+          <div>✖</div>
+          <div>✖</div>
+          <div>TAC</div>
+          <div>○</div>
+          <div>○</div>
+          <div>✖</div>
+          <div>TOC</div>
+          <button>START</button>
+        </div>
+      </div> -->
+      <!-- <div class="game">
+        <div class="tictactoe">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <button>RESTART</button>
+        </div>
+      </div> -->
+    </div>
   </body>
 </html>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.18-beta.0/vue.js'></script>
