--- a/public/8f/index.html
+++ b/public/8f/index.html
@@ -11,32 +11,59 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="main">
       <!-- <div class="start">
-        <div class="tictactoe">
-          <div>TIC</div>
-          <div>○</div>
-          <div>✖</div>
-          <div>✖</div>
-          <div>TAC</div>
-          <div>○</div>
-          <div>○</div>
-          <div>✖</div>
-          <div>TOC</div>
+        <div class="content">
+          <div class="tictactoe">
+            <div>TIC</div>
+            <div>○</div>
+            <div>✖</div>
+            <div>✖</div>
+            <div>TAC</div>
+            <div>○</div>
+            <div>○</div>
+            <div>✖</div>
+            <div>TOC</div>
+          </div>
           <button>START</button>
         </div>
       </div> -->
       <!-- <div class="game">
-        <div class="tictactoe">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="content">
+          <div class="score">
+            <div class="trun">✖</div>
+            <div class="num">10</div>
+            <div class="vs">VS</div>
+            <div class="num">8</div>
+            <div class="trun is-active">〇</div>
+          </div>
+          <div class="tictactoe">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <button>RESTART</button>
+        </div>
+      </div> -->
+      <!-- <div class="winner">
+        <div class="content">
+          <div class="score">
+            <div class="trun">✖</div>
+            <div class="num">10</div>
+            <div class="vs">VS</div>
+            <div class="num">8</div>
+            <div class="trun is-active">○</div>
+          </div>
+          <div class="result">
+            <i>✖</i>
+            <div class="text">WINNER!</div>
+          </div>
           <button>RESTART</button>
         </div>
       </div> -->
