--- a/public/8f/index.html
+++ b/public/8f/index.html
@@ -67,6 +67,22 @@
           <button>RESTART</button>
         </div>
       </div> -->
+      <!-- <div class="flat">
+        <div class="content">
+          <div class="score">
+            <div class="trun">✖</div>
+            <div class="num">10</div>
+            <div class="vs">VS</div>
+            <div class="num">8</div>
+            <div class="trun is-active">○</div>
+          </div>
+          <div class="result">
+            <i>✖〇</i>
+            <div class="text">DRAW! DRAW! DRAW!</div>
+          </div>
+          <button>RESTART</button>
+        </div>
+      </div> -->
     </div>
   </body>
 </html>
