--- a/public/9f/index.html
+++ b/public/9f/index.html
@@ -33,4 +33,5 @@
   </body>
 </html>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.18-beta.0/vue.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js'></script>
 <script src="main.js"></script>
