--- a/sourse/9f/index.html
+++ b/sourse/9f/index.html
@@ -11,26 +11,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="app" class="main">
-      
-      <!-- <div class="turntable">
-        <div class="item">
-          <div></div>
-        </div>
-        <div class="hand"></div>
-        <div class="press">PRESS</div>
-      </div>
-      
-      <div class="result lt">
-        <div class="result-text">WELL<br />DONE!</div>
-      </div>
-      <div class="result rt">
-        <div class="result-text">
-          YOU GET A FREE...
-          <i>child</i>
-        </div>
-      </div> -->
-    </div>
+    <div id="app" class="main"></div>
   </body>
 </html>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.18-beta.0/vue.js'></script>
