--- a/public/10f/popup.html
+++ b/public/10f/popup.html
@@ -1,47 +1,35 @@
-<!doctype html>
-<!--
- This page is shown when the extension button is clicked, because the
- "browser_action" field in manifest.json contains the "default_popup" key with
- value "popup.html".
- -->
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
-    <style type="text/css">
-      body {
-        margin: 10px;
-        white-space: nowrap;
-      }
-
-      h1 {
-        font-size: 15px;
-      }
-
-      #container {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-      }
-    </style>
-    <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
-    -->
-    <script src="popup.js"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>10F-Chrome 應用程式 (幹話產生器)</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Background Color Changer</h1>
-    <div id="container">
-      <span>Choose a color</span>
-      <select id="dropdown">
-        <option selected disabled hidden value=''></option>
-        <option value="white">White</option>
-        <option value="pink">Pink</option>
-        <option value="green">Green</option>
-        <option value="yellow">Yellow</option>
-      </select>
+    <div class="main">
+      <div class="main-block">
+        <div class="col">
+          <div class="tit">點燈模式</div>
+          <div data="checkbox-switch">
+            <input type="checkbox" id="switch" />
+            <label for="switch"></label>
+          </div>
+        </div>
+      </div>
+      <div class="main-block">
+        <div class="col">
+          <div class="tit">我的語錄</div>
+          <span>編輯</span>
+        </div>
+        <div class="add">+ 新增語錄</div>
+      </div>
+      <div class="main-block">
+        <div>偏好設定…</div>
+      </div>
     </div>
   </body>
 </html>
+<script src="popup.js"></script>
