--- a/sourse/10f/popup.html
+++ b/sourse/10f/popup.html
@@ -6,14 +6,14 @@
     <title>10F-Chrome 應用程式 (幹話產生器)</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
 
   <body>
     <div class="main">
       <div class="main-block">
         <div class="col">
-          <div class="tit">點燈模式</div>
+          <div class="tit">夜間模式</div>
           <div data="checkbox-switch">
             <input type="checkbox" id="switch"/>
             <label for="switch"></label>
