--- a/sourse/10f/page.html
+++ b/sourse/10f/page.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>10F-Chrome 應用程式 (幹話產生器)</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link rel="stylesheet" href="page.css" />
+    
   </head>
 
   <body>
@@ -66,5 +67,6 @@
     </div> -->
   </body>
 </html>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.18-beta.0/vue.js'></script>
+
+<script src='vue.js'></script>
 <script src="page.js"></script>
