--- a/public/10f/popup.html
+++ b/public/10f/popup.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>10F-Chrome 應用程式 (幹話產生器)</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
-    <link rel="stylesheet" href="popup.css" />
-  </head>
-  <body>
-    <div class="main">
-      <div class="main-block">
-        <div class="col">
-          <div class="tit">夜間模式</div>
-          <div data="checkbox-switch">
-            <input type="checkbox" id="switch" />
-            <label for="switch"></label>
-          </div>
-        </div>
-      </div>
-      <div class="main-block">
-        <div class="col">
-          <div class="tit">我的語錄</div>
-          <span>編輯</span>
-        </div>
-        <div class="add">+ 新增語錄</div>
-      </div>
-      <div class="main-block">
-        <div>偏好設定…</div>
-      </div>
-    </div>
-  </body>
-</html>
-<script src="popup.js"></script>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700"><link rel=stylesheet href=https://use.fontawesome.com/releases/v5.7.2/css/all.css><title>10F-Chrome 應用程式 (幹話產生器)</title><link href=css/popup.1d532bb4.css rel=preload as=style><link href=js/chunk-vendors.0561a19c.js rel=preload as=script><link href=js/popup.eb001962.js rel=preload as=script><link href=css/popup.1d532bb4.css rel=stylesheet></head><body><noscript><strong>We're sorry but 10f doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.0561a19c.js></script><script src=js/popup.eb001962.js></script></body></html>
